--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpeg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <p>Ik ben Pieter Girgiz en woon in Purmerend. Ik ben Koptisch Orthodox en ga naar de koptische kerk in Amsterdam. Ik zou mezelf omschrijven als actieve sociale jongen. Ik ben iemand die van uitdaging houdt. Mijn kwaliteiten zijn dat ik geduldig ben, goed samen kan werken, zorg voor een leuk sfeer en leergierig. Ik zit nog op school (5 VWO) dus heb geen diploma. Mijn hobby’s zijn voetbal en fitness. Ik ben in bezit van een auto rijbewijs. Ik spreek en schrijf goed Nederlands, Engels en Arabisch. Ik heb een C1 diploma gehaald voor Engels en ben nu bezig voor een hogere diploma</p>
+                    <p>Ik ben Pieter Girgiz en woon in Purmerend. Ik ben Koptisch Orthodox en ga naar de koptische kerk in Amsterdam. Ik zou mezelf omschrijven als actieve sociale jongen. Ik ben iemand die van uitdaging houdt. Mijn kwaliteiten zijn dat ik geduldig ben, goed samen kan werken, zorg voor een leuk sfeer en leergierig. Ik zit nog op school (6 VWO) dus heb geen diploma. Mijn hobby’s zijn voetbal en fitness. Ik ben in bezit van een auto rijbewijs. Ik spreek en schrijf goed Nederlands, Engels en Arabisch. Ik heb een C1 diploma gehaald voor Engels en ben nu bezig voor een hogere diploma</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Naam: <span class="text-secondary">Pieter Girgiz</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Geboortedatum: <span class="text-secondary">13-04-2005</span></h6></div>
@@ -94,7 +94,7 @@
             <h1 class="position-absolute text-uppercase text-info">Education & Expericence</h1>
         </div>
         <div class="row align-items-center">
-            <div class="col-lg-6">
+            <div class="col-lg-7">
                 <h3 class="mb-4">My Education</h3>
                 <div class="border-left border-info pt-2 pl-4 ml-2">
                     <div class="position-relative ex-me mb-4">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-7">
                 <h3 class="mb-4">My Expericence</h3>
                 <div class="border-left border-info pt-2 pl-4 ml-2">
                     <div class="position-relative ex-me mb-4">
@@ -122,6 +122,23 @@
                         <i class="far fa-dot-circle text-info position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
                         <h5 class="font-weight-bold mb-1">Amoon Jozef</h5>
                         <p class="mb-2"><strong>bezorgen/serveren</strong> | <small>2023-heden</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-7">
+                <h3 class="mb-4">My Languages</h3>
+                <div class="border-left border-info pt-2 pl-4 ml-2">
+                    <div class="position-relative ex-me mb-4">
+                        <i class="far fa-dot-circle text-info position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
+                        <h5 class="font-weight-bold mb-1">Nederlands - vloeiend</h5>
+                    </div>
+                    <div class="position-relative ex-me mb-4">
+                        <i class="far fa-dot-circle text-info position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
+                        <h5 class="font-weight-bold mb-1">Arabish - vloeiend</h5>
+                    </div>
+                    <div class="position-relative ex-me mb-4">
+                        <i class="far fa-dot-circle text-info position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
+                        <h5 class="font-weight-bold mb-1">Engels - vloeiend</h5>
                     </div>
                 </div>
             </div>
@@ -146,6 +163,7 @@
                             <li>
                                 <span class="fa-li"><svg class="svg-inline--fa fa-graduation-cap fa-w-20 text-warning" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="graduation-cap" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" data-fa-i2svg=""><path fill="currentColor" d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z"></path></svg><!-- <i class="fas fa-graduation-cap text-warning"></i> Font Awesome fontawesome.com --></span>
                                 <a href="pdfs/cambridge.pdf" target="_blank">Certificate in Advanced English</a> 
+                                <a href="pdfs/MasterClass.pdf" target="_blank">MasterClass International Business</a> 
                             </li>
 
                         </ul>
